Личный проект: начинаем разметку
Разметка Главной и Страницы каталога. Только HTML без форм.

--- a/monopods.html
+++ b/monopods.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
+    <title>HTML Academy: Моноподы</title>
   </head>
   <body>
     <header>
@@ -12,7 +12,8 @@
         </a>
         <!-- Здесь будет форма поиска -->
         <ul>
-          <li><a href="#">Войти</a></li>
+          <li><a href="#">Валентин Петухов</a></li>
+          <li><a href="#">Выйти</a></li>
         </ul>
         <ul>
           <li><a href="#">Сравнить</a></li>
@@ -37,43 +38,63 @@
       </nav>
     </header>
     <main>
-      <h1>Интернет-магазин гаджетов "Девайс"</h1>
-      <section>
-        <h2>О нас</h2>
-        <p>
-          Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
-        </p>
-        <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
-        </p>
-        <ul>
-          <li>ДеловыеЛинии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-        </ul>
-        <a href="#" title="О нас">Подробнее о нас</a>
-      </section>
-      <section>
-        <h2>Контакты</h2>
-        <p>
-          Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
-        </p>
-        <a>
-          <img src="https://via.placeholder.com/560x220" width="560px" height="220px" alt="Изображение карты">
-        </a>
-        <button type="button">Напишите нам</button>
-      </section>
+      <h1>Моноподы для селфи</h1>
+      <ul>
+        <li><a href="index.html" title="Главная">Главная</a></li>
+        <li><a href="catlog.html" title="Каталог">Каталог</a></li>
+        <li><a>Моноподы для селфи</a></li>
+      </ul>
+      <!-- Здесь будут формы фильтра и сортировки -->
+      <ul>
+        <li>
+          <p>
+            <a><h3>Любительская селфи-палка</h3></a>
+            500 руб
+          </p>
+          <a>
+            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
+          </a>
+        </li>
+        <li>
+          <p>
+            <a><h3>Профессиональная селфи-палка </h3></a>
+            1500 руб
+          </p>
+          <a>
+            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка ">
+          </a>
+        </li>
+        <li>
+          <p>
+            <a><h3>Непотопляемая селфи-палка</h3></a>
+            2500 руб
+          </p>
+          <a>
+            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
+          </a>
+        </li>
+        <li>
+          <p>
+            <a><h3>Селфи-палка «Следуй за мной»</h3></a>
+            4900 руб
+          </p>
+          <a>
+            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+          </a>
+        </li>
+      </ul>
     </main>
     <footer>
       <img src="https://via.placeholder.com/150x100" width="150px" height="100px" alt="Логотип магазина Девайс">
       <ul>
-        <li><a href="#">Войти</a></li>
+        <li><a href="#">Валентин Петухов</a></li>
+        <li><a href="#">Выйти</a></li>
       </ul>
       <ul>
         <li><a href="#">Сравнить</a></li>
         <li><a href="#">Корзина</a></li>
       </ul>
-      <addres>г. Москва, ул. Строителей, 15</address>
+      <address>г. Москва, ул. Строителей, 15</address>
       <ul>
         <li>Доставка</li>
         <li>Гарантия</li>
@@ -89,7 +110,5 @@
         <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="Логотип HTML Academy">
       </a>
     </footer>
-
-
   </body>
 </html>
