Личный проект: начинаем разметку
Исправил ошибки в разметке Главной и Страницы каталога. Только HTML без форм.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <a>
-          <img src="https://via.placeholder.com/150x100" width="150px" height="100px" alt="Логотип магазина Девайс">
+          <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
         </a>
         <!-- Здесь будет форма поиска -->
         <ul>
@@ -59,13 +59,13 @@
           Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
         </p>
         <a>
-          <img src="https://via.placeholder.com/560x220" width="560px" height="220px" alt="Изображение карты">
+          <img src="https://via.placeholder.com/560x220" width="560" height="220" alt="Изображение карты">
         </a>
         <button type="button">Напишите нам</button>
       </section>
     </main>
     <footer>
-      <img src="https://via.placeholder.com/150x100" width="150px" height="100px" alt="Логотип магазина Девайс">
+      <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
       <ul>
         <li><a href="#">Войти</a></li>
       </ul>
@@ -73,7 +73,7 @@
         <li><a href="#">Сравнить</a></li>
         <li><a href="#">Корзина</a></li>
       </ul>
-      <addres>г. Москва, ул. Строителей, 15</address>
+      <address>г. Москва, ул. Строителей, 15</address>
       <ul>
         <li>Доставка</li>
         <li>Гарантия</li>
