--- a/monopods.html
+++ b/monopods.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <a>
-          <img src="https://via.placeholder.com/150x100" width="150px" height="100px" alt="Логотип магазина Девайс">
+          <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
         </a>
         <!-- Здесь будет форма поиска -->
         <ul>
@@ -47,37 +47,29 @@
       <!-- Здесь будут формы фильтра и сортировки -->
       <ul>
         <li>
-          <p>
-            <a><h3>Любительская селфи-палка</h3></a>
-            500 руб
-          </p>
+          <a><h3>Любительская селфи-палка</h3></a>
+          <p>500 руб</p>
           <a>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
           </a>
         </li>
         <li>
-          <p>
-            <a><h3>Профессиональная селфи-палка </h3></a>
-            1500 руб
-          </p>
+          <a><h3>Профессиональная селфи-палка </h3></a>
+          <p>1500 руб</p>
           <a>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка ">
           </a>
         </li>
         <li>
-          <p>
-            <a><h3>Непотопляемая селфи-палка</h3></a>
-            2500 руб
-          </p>
+          <a><h3>Непотопляемая селфи-палка</h3></a>
+          <p>2500 руб</p>
           <a>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
           </a>
         </li>
         <li>
-          <p>
-            <a><h3>Селфи-палка «Следуй за мной»</h3></a>
-            4900 руб
-          </p>
+          <a><h3>Селфи-палка «Следуй за мной»</h3></a>
+          <p>4900 руб</p>
           <a>
             <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
           </a>
@@ -85,7 +77,7 @@
       </ul>
     </main>
     <footer>
-      <img src="https://via.placeholder.com/150x100" width="150px" height="100px" alt="Логотип магазина Девайс">
+      <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
       <ul>
         <li><a href="#">Валентин Петухов</a></li>
         <li><a href="#">Выйти</a></li>
