Личный проект: начинаем разметку
Внес все правки по рекомендации наставника.

--- a/monopods.html
+++ b/monopods.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <nav>
-        <a>
+        <a href="index.html">
           <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
         </a>
         <!-- Здесь будет форма поиска -->
@@ -31,9 +31,9 @@
                 <li><a href="#">Квадрокоптеры</a></li>
               </ul>
           </li>
-          <li>Доставка</li>
-          <li>Гарантия</li>
-          <li>Контакты</li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -49,35 +49,37 @@
         <li>
           <a><h3>Любительская селфи-палка</h3></a>
           <p>500 руб</p>
-          <a>
-            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
-          </a>
+          <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
+          <a href="#">В корзину</a>
+          <a href="#">Добавить к сравнению</a>
         </li>
         <li>
           <a><h3>Профессиональная селфи-палка </h3></a>
           <p>1500 руб</p>
-          <a>
-            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка ">
-          </a>
+          <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка ">
+          <a href="#">В корзину</a>
+          <a href="#">Добавить к сравнению</a>
         </li>
         <li>
           <a><h3>Непотопляемая селфи-палка</h3></a>
           <p>2500 руб</p>
-          <a>
-            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
-          </a>
+          <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
+          <a href="#">В корзину</a>
+          <a href="#">Добавить к сравнению</a>
         </li>
         <li>
           <a><h3>Селфи-палка «Следуй за мной»</h3></a>
           <p>4900 руб</p>
-          <a>
-            <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-          </a>
+          <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+          <a href="#">В корзину</a>
+          <a href="#">Добавить к сравнению</a>
         </li>
       </ul>
     </main>
     <footer>
-      <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
+      <a href="index.html">
+        <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
+      </a>
       <ul>
         <li><a href="#">Валентин Петухов</a></li>
         <li><a href="#">Выйти</a></li>
@@ -88,15 +90,15 @@
       </ul>
       <address>г. Москва, ул. Строителей, 15</address>
       <ul>
-        <li>Доставка</li>
-        <li>Гарантия</li>
-        <li>Контакты</li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
       <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
       <ul>
-        <li><a href="#" title="Facebook">Facebook</a></li>
-        <li><a href="#" title="Instagram">Instagram</a></li>
-        <li><a href="#" title="Twitter">Twitter</a></li>
+        <li><a href="#" title="Facebook" target="_blank">Facebook</a></li>
+        <li><a href="#" title="Instagram" target="_blank">Instagram</a></li>
+        <li><a href="#" title="Twitter" target="_blank">Twitter</a></li>
       </ul>
       <a href="https://htmlacademy.ru/intensive/htmlcss" title="интенсив «Профессиональный HTML и CSS, уровень 1»">
         <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="Логотип HTML Academy">
