--- a/index.html
+++ b/index.html
@@ -30,42 +30,46 @@
                 <li><a href="#">Квадрокоптеры</a></li>
               </ul>
           </li>
-          <li>Доставка</li>
-          <li>Гарантия</li>
-          <li>Контакты</li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <h1>Интернет-магазин гаджетов "Девайс"</h1>
-      <section>
-        <h2>О нас</h2>
-        <p>
-          Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
-        </p>
-        <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
-        </p>
-        <ul>
-          <li>ДеловыеЛинии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-        </ul>
-        <a href="#" title="О нас">Подробнее о нас</a>
-      </section>
-      <section>
-        <h2>Контакты</h2>
-        <p>
-          Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
-        </p>
-        <a>
-          <img src="https://via.placeholder.com/560x220" width="560" height="220" alt="Изображение карты">
-        </a>
-        <button type="button">Напишите нам</button>
-      </section>
+      <div>
+        <section>
+          <h2>О нас</h2>
+          <p>
+            Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
+          </p>
+          <p>
+            Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
+          </p>
+          <ul>
+            <li>ДеловыеЛинии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul>
+          <a href="#" title="О нас">Подробнее о нас</a>
+        </section>
+        <section>
+          <h2>Контакты</h2>
+          <p>
+            Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
+          </p>
+          <a>
+            <img src="https://via.placeholder.com/560x220" width="560" height="220" alt="Изображение карты">
+          </a>
+          <a href="#">Напишите нам</a>
+        </section>
+      </div>
     </main>
     <footer>
-      <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
+      <a>
+        <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
+      </a>
       <ul>
         <li><a href="#">Войти</a></li>
       </ul>
@@ -75,15 +79,15 @@
       </ul>
       <address>г. Москва, ул. Строителей, 15</address>
       <ul>
-        <li>Доставка</li>
-        <li>Гарантия</li>
-        <li>Контакты</li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Контакты</a></li>
       </ul>
       <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
       <ul>
-        <li><a href="#" title="Facebook">Facebook</a></li>
-        <li><a href="#" title="Instagram">Instagram</a></li>
-        <li><a href="#" title="Twitter">Twitter</a></li>
+        <li><a href="#" title="Facebook" target="_blank">Facebook</a></li>
+        <li><a href="#" title="Instagram" target="_blank">Instagram</a></li>
+        <li><a href="#" title="Twitter" target="_blank">Twitter</a></li>
       </ul>
       <a href="https://htmlacademy.ru/intensive/htmlcss" title="интенсив «Профессиональный HTML и CSS, уровень 1»">
         <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="Логотип HTML Academy">
