Личный проект: дополняем разметку
Дополнил HTML разметку главной страницы.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,134 @@
     </header>
     <main>
       <h1>Интернет-магазин гаджетов "Девайс"</h1>
+<!-- Slider -->
+      <section>
+        <h2>Популярные товары</h2>
+        <article>
+          <img src="https://via.placeholder.com/380x480" width="380" height="480" alt="Самая длинная палка для селфи">
+          <span>01</span>
+          <h3>Делай селфи,<br> как Бен Стиллер!</h3>
+          <p>Самая длинная палка для селфи доступна в нашем магазине.<br> Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+          <a href="#">Подробнее</a>
+          <!-- Радиокнопки для переключения слайдов -->
+          <dl>
+            <dt>8,5 м</dt>
+            <dd>Длинна палки</dd>
+            <dt>5 кг</dt>
+            <dd>Вес палки</dd>
+            <dt>Карбон</dt>
+            <dd>материал</dd>
+          </dl>
+        </article>
+        <article>
+          <img src="https://via.placeholder.com/380x480" width="380" height="480" alt="Мотивирующий фитнес-браслет">
+          <span>02</span>
+          <h3>Худеем<br> правильно!</h3>
+          <p>Мотивирующие фитнес-браслеты помогут найти в себе силы<br> не пропускать занятия и соблюдать диету.</p>
+          <a href="#">Подробнее</a>
+          <!-- Радиокнопки для переключения слайдов -->
+          <dl>
+            <dt>48 часов</dt>
+            <dd>Без подзарядки</dd>
+          </dl>
+        </article>
+        <article>
+          <img src="https://via.placeholder.com/380x480" width="380" height="480" alt="Мотивирующий фитнес-браслет">
+          <span>03</span>
+          <h3>Порхает как бабочка, жалит как пчела!</h3>
+          <p>Этот обычный, на первый взгляд, квадрокоптер оснащен<br> мощным лазером, замаскированным под стандартную камеру.</p>
+          <a href="#">Подробнее</a>
+          <!-- Радиокнопки для переключения слайдов -->
+          <dl>
+            <dt>800 м</dt>
+            <dd>Дальность полета</dd>
+            <dt>50 м</dt>
+            <dd>Радиус поражения</dd>
+          </dl>
+        </article>
+      </section>
+<!-- Popular -->
+      <section>
+        <h2>Популярные категории</h2>
+        <ul>
+          <li>
+            <a href="#">
+              <div></div> <!-- Размер и фон будет рализовни при стилизации -->
+              <p>Виртуальная реальность</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div></div> <!-- Размер и фон будет рализовни при стилизации -->
+              <p>Моноподы для селфи</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div></div> <!-- Размер и фон будет рализовни при стилизации -->
+              <p>Экшн-камеры</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div></div> <!-- Размер и фон будет рализовни при стилизации -->
+              <p>Фитнес-браслеты</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div></div> <!-- Размер и фон будет рализовни при стилизации -->
+              <p>Умные часы</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div></div> <!-- Размер и фон будет рализовни при стилизации -->
+              <p>Квадрокоптеры</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+<!-- Services -->
+      <section>
+        <h2>Наши услуги</h2>
+        <ul> <!-- Будет добавленны label радиокнопок для смены слайдов -->
+          <li>Доставка</li>
+          <li>Гарантия</li>
+          <li>Кредит</li>
+        </ul>
+        <article>
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+        </article>
+        <article>
+          <h3>Гарантия</h3>
+          <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+        </article>
+        <article>
+          <h3>Кредит</h3>
+          <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+        </article>
+      </section>
+<!-- Partners -->
+      <section>
+        <h2>Наши партнеры</h2>
+        <ul>
+          <li>
+            <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип компании Dji">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип компании SP Gadgets">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип компании Go Pro">
+          </li>
+          <li>
+            <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип компании Vive">
+          </li>
+        </ul>
+      </section>
+<!-- Info -->
       <div>
         <section>
           <h2>О нас</h2>
