Личный проект: начинаем готовить графику
Импортировал с макета изобоажения. Контентные подключил

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <a>
-          <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
+          <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина Девайс">
         </a>
         <!-- Здесь будет форма поиска -->
         <ul>
@@ -188,7 +188,7 @@
             Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
           </p>
           <a>
-            <img src="https://via.placeholder.com/560x220" width="560" height="220" alt="Изображение карты">
+            <img src="img/map.jpg" width="560" height="222" alt="Изображение карты">
           </a>
           <a href="#">Напишите нам</a>
         </section>
@@ -196,7 +196,7 @@
     </main>
     <footer>
       <a>
-        <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
+        <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина Девайс">
       </a>
       <ul>
         <li><a href="#">Войти</a></li>
@@ -218,7 +218,7 @@
         <li><a href="#" title="Twitter" target="_blank">Twitter</a></li>
       </ul>
       <a href="https://htmlacademy.ru/intensive/htmlcss" title="интенсив «Профессиональный HTML и CSS, уровень 1»">
-        <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="Логотип HTML Academy">
+        <img src="img/logo-html.svg" width="27" height="34" alt="Логотип HTML Academy">
       </a>
     </footer>
 
