--- a/monopods.html
+++ b/monopods.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
         <a href="index.html">
-          <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
+          <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина Девайс">
         </a>
         <!-- Здесь будет форма поиска -->
         <ul>
@@ -49,28 +49,28 @@
         <li>
           <a><h3>Любительская селфи-палка</h3></a>
           <p>500 руб</p>
-          <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
+          <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
           <a href="#">В корзину</a>
           <a href="#">Добавить к сравнению</a>
         </li>
         <li>
           <a><h3>Профессиональная селфи-палка </h3></a>
           <p>1500 руб</p>
-          <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка ">
+          <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка ">
           <a href="#">В корзину</a>
           <a href="#">Добавить к сравнению</a>
         </li>
         <li>
           <a><h3>Непотопляемая селфи-палка</h3></a>
           <p>2500 руб</p>
-          <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
+          <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
           <a href="#">В корзину</a>
           <a href="#">Добавить к сравнению</a>
         </li>
         <li>
           <a><h3>Селфи-палка «Следуй за мной»</h3></a>
           <p>4900 руб</p>
-          <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+          <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
           <a href="#">В корзину</a>
           <a href="#">Добавить к сравнению</a>
         </li>
@@ -78,7 +78,7 @@
     </main>
     <footer>
       <a href="index.html">
-        <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип магазина Девайс">
+        <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина Девайс">
       </a>
       <ul>
         <li><a href="#">Валентин Петухов</a></li>
@@ -101,7 +101,7 @@
         <li><a href="#" title="Twitter" target="_blank">Twitter</a></li>
       </ul>
       <a href="https://htmlacademy.ru/intensive/htmlcss" title="интенсив «Профессиональный HTML и CSS, уровень 1»">
-        <img src="https://via.placeholder.com/50x50" width="50" height="50" alt="Логотип HTML Academy">
+        <img src="img/logo-html.svg" width="27" height="34" alt="Логотип HTML Academy">
       </a>
     </footer>
   </body>
