Личный проект: продолжаем подготовку графики
Закончил импорт и подключение контентной графики

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <section>
         <h2>Популярные товары</h2>
         <article>
-          <img src="https://via.placeholder.com/380x480" width="380" height="480" alt="Самая длинная палка для селфи">
+          <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи">
           <span>01</span>
           <h3>Делай селфи,<br> как Бен Стиллер!</h3>
           <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -57,7 +57,7 @@
           </dl>
         </article>
         <article>
-          <img src="https://via.placeholder.com/380x480" width="380" height="480" alt="Мотивирующий фитнес-браслет">
+          <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующий фитнес-браслет">
           <span>02</span>
           <h3>Худеем<br> правильно!</h3>
           <p>Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
@@ -68,7 +68,7 @@
           </dl>
         </article>
         <article>
-          <img src="https://via.placeholder.com/380x480" width="380" height="480" alt="Мотивирующий фитнес-браслет">
+          <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер оснащеный мощным лазером">
           <span>03</span>
           <h3>Порхает как бабочка, жалит как пчела!</h3>
           <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
@@ -151,22 +151,22 @@
         <ul>
           <li>
             <a href="#" title="сайт компании Dji" target="_blank">
-              <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип компании Dji">
+              <img src="img/logo-1-grayscale.png" width="260" height="100" alt="Логотип компании Dji">
             </a>
           </li>
           <li>
             <a href="#" title="сайт компании SP Gadgets" target="_blank">
-              <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип компании SP Gadgets">
+              <img src="img/logo-2-grayscale.png" width="260" height="100" alt="Логотип компании SP Gadgets">
             </a>
           </li>
           <li>
             <a href="#" title="сайт компании Go Pro" target="_blank">
-              <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип компании Go Pro">
+              <img src="img/logo-3-grayscale.png" width="260" height="100" alt="Логотип компании Go Pro">
             </a>
           </li>
           <li>
             <a href="#" title="сайт компании Vive" target="_blank">
-              <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип компании Vive">
+              <img src="img/logo-4-grayscale.png" width="260" height="100" alt="Логотип компании Vive">
             </a>
           </li>
         </ul>
