Личный проект: продолжаем разметку
Внес правки по рекомендациям наставника

--- a/monopods.html
+++ b/monopods.html
@@ -11,10 +11,9 @@
           <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина Девайс">
         </a>
         <form action="index.html" method="post">
-          <p>
             <button type="submit" name="start-search">Найти</button>
-            <input type="search" name="search" placeholder="Поиск по сайту">
-          </p>
+            <input type="search" name="search" id="search" placeholder="Поиск по сайту">
+            <label for="search" class="visually-hidden">Поиск по сайту</label>
         </form>
         <ul>
           <li><a href="#">Валентин Петухов</a></li>
