--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
           <img src="img/logo.svg" width="163" height="35" alt="Логотип магазина Девайс">
         </a>
         <form action="index.html" method="post">
-          <p>
             <button type="submit" name="start-search">Найти</button>
-            <input type="search" name="search" placeholder="Поиск по сайту">
-          </p>
+            <input type="search" name="search" id="search" placeholder="Поиск по сайту">
+            <label for="search" class="visually-hidden">Поиск по сайту</label>
         </form>
         <ul>
           <li><a href="#">Войти</a></li>
@@ -42,10 +41,10 @@
       </nav>
     </header>
     <main>
-      <h1>Интернет-магазин гаджетов "Девайс"</h1>
+      <h1 class="visually-hidden">Интернет-магазин гаджетов "Девайс"</h1>
 <!-- Slider -->
       <section>
-        <h2>Популярные товары</h2>
+        <h2 class="visually-hidden">Популярные товары</h2>
         <article>
           <img src="img/slider-1.png" width="384" height="486" alt="Самая длинная палка для селфи">
           <span>01</span>
@@ -89,7 +88,7 @@
       </section>
 <!-- Popular -->
       <section>
-        <h2>Популярные категории</h2>
+        <h2 class="visually-hidden">Популярные категории</h2>
         <ul>
           <li>
             <a href="#">
@@ -131,7 +130,7 @@
       </section>
 <!-- Services -->
       <section>
-        <h2>Наши услуги</h2>
+        <h2 class="visually-hidden">Наши услуги</h2>
         <ul> <!-- Будет добавленны label радиокнопок для смены слайдов -->
           <li>Доставка</li>
           <li>Гарантия</li>
@@ -152,20 +151,20 @@
       </section>
 <!-- Partners -->
       <section>
-        <h2>Наши партнеры</h2>
+        <h2 class="visually-hidden">Наши партнеры</h2>
         <ul>
           <li>
-            <a href="#" title="сайт компании Dji" target="_blank">
+            <a href="#" target="_blank">
               <img src="img/logo-1-grayscale.png" width="260" height="100" alt="Логотип компании Dji">
             </a>
           </li>
           <li>
-            <a href="#" title="сайт компании SP Gadgets" target="_blank">
+            <a href="#" target="_blank">
               <img src="img/logo-2-grayscale.png" width="260" height="100" alt="Логотип компании SP Gadgets">
             </a>
           </li>
           <li>
-            <a href="#" title="сайт компании Go Pro" target="_blank">
+            <a href="#" target="_blank">
               <img src="img/logo-3-grayscale.png" width="260" height="100" alt="Логотип компании Go Pro">
             </a>
           </li>
@@ -191,14 +190,14 @@
             <li>Автотрейдинг</li>
             <li>ЖелДорЭкспедиция</li>
           </ul>
-          <a href="#" title="О нас">Подробнее о нас</a>
+          <a href="#">Подробнее о нас</a>
         </section>
         <section>
           <h2>Контакты</h2>
           <p>
             Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
           </p>
-          <a>
+          <a href="#">
             <img src="img/map.jpg" width="560" height="222" alt="Изображение карты">
           </a>
           <a href="#">Напишите нам</a>
@@ -207,8 +206,8 @@
     </main>
 <!-- PopUp Write As -->
     <section>
-      <h2>Напишите нам</h2>
-      <button type="button" name="modal-close">Закрыть</button>
+      <h2 class="visually-hidden">Напишите нам</h2>
+      <button type="button">Закрыть</button>
       <form action="https://echo.htmlacademy.ru" method="post">
         <p>
           <label for="user-name">Ваше имя:</label>
@@ -219,13 +218,16 @@
           <input type="email" name="user-email" id="user-email" placeholder="email@example.com">
         </p>
         <p>
-          <label>
-            Текст письма:
-            <textarea name="user-content" rows="8" cols="80" placeholder="В свободной форме"></textarea>
-          </label>
+          <label for="user-content">Текст письма:</label>
+            <textarea name="user-content" id="user-content" rows="8" cols="80" placeholder="В свободной форме"></textarea>
         </p>
-        <button type="submit" name="submit">Отправить</button>
+        <button type="submit">Отправить</button>
       </form>
+    </section>
+    <section>
+      <h2 class="visually-hidden">Карта</h2>
+      <button type="button">Закрыть</button>
+      <img src="img/map-big.png" alt="Изображение карты">
     </section>
     <footer>
       <a>
@@ -250,7 +252,7 @@
         <li><a href="#" title="Instagram" target="_blank">Instagram</a></li>
         <li><a href="#" title="Twitter" target="_blank">Twitter</a></li>
       </ul>
-      <a href="https://htmlacademy.ru/intensive/htmlcss" title="интенсив «Профессиональный HTML и CSS, уровень 1»">
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
         <img src="img/logo-html.svg" width="27" height="34" alt="Логотип HTML Academy">
       </a>
     </footer>
