--- a/monopods.html
+++ b/monopods.html
@@ -93,6 +93,27 @@
           <button type="submit" name="submit">Показать</button>
         </form>
       </section>
+      <section>
+        <h2>Сортировка:</h2>
+        <form action="index.html" method="post">
+          <ul>
+            <li>
+              <input type="radio" name="sort" value="by-price" id="by-price" class="visually-hidden" checked>
+              <label for="by-price">По цене</label>
+            </li>
+            <li>
+              <input type="radio" name="sort" value="by-type" id="by-type" class="visually-hidden">
+              <label for="by-type">По типу</label>
+            </li>
+            <li>
+              <input type="radio" name="sort" value="by-popularity" id="by-popularity" class="visually-hidden">
+              <label for="by-popularity">По популярности</label>
+            </li>
+          </ul>
+          <button type="button" name="up-dir">По возрастанию</button>
+          <button type="button" name="down-dir">По убыванию</button>
+        </form>
+      </section>
       <ul>
         <li>
           <a><h3>Любительская селфи-палка</h3></a>
@@ -123,6 +144,22 @@
           <a href="#">Добавить к сравнению</a>
         </li>
       </ul>
+      <section>
+        <h2 class="visually-hidden">Навигация по страницам товаров</h2>
+        <button type="button" name="page-down">Назад</button>
+        <ul>
+          <li>
+            <a href="#">1</a>
+          </li>
+          <li>
+            <a href="#">2</a>
+          </li>
+          <li>
+            <a href="#">3</a>
+          </li>
+        </ul>
+        <button type="button" name="page-up">Вперед</button>
+      </section>
     </main>
     <footer>
       <a href="index.html">
